...
            "state": "translated",
            "value": "Добавить книгу из файла"
          }
        }
      }
    },
    "Add bookmark": {
      "extractionState": "manual",
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Добавить закладку"
...
      }
    },
    "Bookhold": {
      "extractionState": "manual",
      "shouldTranslate": false
    },
    "Bookmark": {
      "extractionState": "manual",
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Закладка"
...
            "state": "translated",
            "value": "Подтвердить"
          }
        }
      }
    },
    "Contents": {
      "extractionState": "manual",
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Оглавление"
...
            "state": "translated",
            "value": "Средний"
          }
        }
      }
    },
    "More": {
      "extractionState": "manual",
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Больше"
...
            "state": "translated",
            "value": "Обычный"
          }
        }
      }
    },
    "Remove": {
      "extractionState": "manual",
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Убрать"
          }
        }
      }
    },
    "Remove bookmark": {
      "extractionState": "manual",
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Убрать закладку"
...
