...
        func make() -> UICollectionViewController {
            let controller = UICollectionViewController(collectionViewLayout: layout())

            controller.collectionView.backgroundColor = UIColor(Design.Surface.screen)
            controller.collectionView.delegate = self
            controller.collectionView.prefetchDataSource = self
            controller.collectionView.accessibilityIdentifier = "library.list"
            controller.collectionView.keyboardDismissMode = .interactive
            controller.collectionView.refreshControl = UIRefreshControl(
                frame: .zero,
                primaryAction: UIAction { [weak self] _ in self?.refresh() }
            )
            source = make(controller.collectionView)
...
